src/test/resources/annotator/DuplicateTagValue.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 field1 = <error descr="Duplicate field tag: 42">42</error>;
    int32 field2 = <error descr="Duplicate field tag: 42">42</error>;
}